--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "next": "14.2.10",
+    "openai": "^4.72.0",
+    "pdf-parser": "^1.0.5",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.81.0",
@@ -17,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
