--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.2.10",
     "openai": "^4.72.0",
+    "pdf-parse": "^1.1.1",
     "pdf-parser": "^1.0.5",
     "react": "^18",
     "react-dom": "^18",
