--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.22.1",
     "next": "14.2.10",
     "openai": "^4.72.0",
     "pdf-parse": "^1.1.1",
